# sqlite-amalgamation

./: .gitignore  CMakeLists.txt  sqlite3.pc.in
